# src/api/routes/misc.route.ts
@@ -6,6 +6,7 @@ import loginVerify from '../middlewares/loginCheck.js'
 const router = express.Router()
 
 router.route('/onwhatsapp').get(keyVerify, loginVerify, controller.onWhatsapp)
+router.route('/contacts').get(keyVerify, loginVerify, controller.getContacts)
 router.route('/downProfile').get(keyVerify, loginVerify, controller.downProfile)
 router.route('/getStatus').get(keyVerify, loginVerify, controller.getStatus)
 router.route('/blockUser').get(keyVerify, loginVerify, controller.blockUser)
